assests/css/display.css
body{
	font-family: arial,helvetica;
	margin-top: 0px;
}
h1{
	font-size: 15px;
	padding: 10px;
}
.container{
	border: 1px solid black;
	background-color: lightgrey;
	width: 70%;
	min-height: 300px;
	margin: 0px auto;
	padding: 10px;

}
.box1{
	border: 1px solid red;
	display: inline-block;
	width: 50px;
	padding: 5px;

}
.box2{
	border: 1px solid blue;
	display: inline-block;
	width: 50px;
	padding: 5px;
}
.box3{
	border: 1px solid green;
	display: inline-block;
	width: 50px;
	padding: 5px;
}
.box4{
	border: 1px solid yellow;
	display: none;
	
}
.box5{
	border: 1px solid orange;
	display: inline-block;
	width: 50px;
	padding: 5px;

}
.outer-inline{
	border: 1px solid red;
	margin: 0px auto;
	width: 30%;

}
.outer-flex{
	border: 1px solid green;
	width: 30%;
	margin: 0 auto;
	display: flex;
	position: relative;
	top: 10px;
}
.flexboxes{
	width: 50px;
	padding: 5px;
}

